wavelandDev/force-app/main/default/objects/Equifax__c/Equifax__c.object-meta.xml
<CustomObject>
    <label>Equifax</label>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>Equifax Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equifax</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>