wavelandDev/force-app/main/default/objects/Equifax__c/fields/BirthDateOrAge__c.field-meta.xml
<CustomField>
    <fullName>BirthDateOrAge__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Birth Date Or Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>