wavelandDev/force-app/main/default/objects/Equifax__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>The first name of the patient</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>