wavelandDev/force-app/main/default/objects/Equifax__c/fields/IsSynched__c.field-meta.xml
<CustomField>
    <fullName>IsSynched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synched</label>
    <type>Checkbox</type>
</CustomField>