wavelandDev/force-app/main/default/objects/Equifax__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>The last name of the patient</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>