wavelandDev/force-app/main/default/objects/Equifax__c/fields/PatientName__c.field-meta.xml
<CustomField>
    <fullName>PatientName__c</fullName>
    <description>Concatenate the Patient Name</description>
    <formula>Name + &#39; &#39; + FirstName__c  + &#39; &#39;+LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>