wavelandDev/force-app/main/default/objects/Equifax__c/fields/RetrievedTime__c.field-meta.xml
<CustomField>
    <fullName>RetrievedTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retrieved Time</label>
    <type>DateTime</type>
</CustomField>