wavelandDev/force-app/main/default/objects/Equifax__c/fields/SocialSecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SocialSecurityNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Security Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>