wavelandDev/force-app/main/default/objects/Equifax__c/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>