wavelandDev/force-app/main/default/objects/Equifax__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>