wavelandDev/force-app/main/default/objects/Equifax__c/recordTypes/IDReport.recordType-meta.xml
<RecordType>
    <fullName>IDReport</fullName>
    <active>true</active>
    <description>Equifax ID Report</description>
    <label>ID Report</label>
</RecordType>