wavelandDev/force-app/main/default/objects/Equifax__c/recordTypes/RecoveryReport.recordType-meta.xml
<RecordType>
    <fullName>RecoveryReport</fullName>
    <active>true</active>
    <description>Equifax Recovery Report</description>
    <label>Recovery Report</label>
</RecordType>